--- a/CapsNet/CapsNet.ipynb
+++ b/CapsNet/CapsNet.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://cdn-images-1.medium.com/max/1600/0*QJb87ivGwz0TodGZ.)\n",
+    "![image](./image/model.png)\n",
     "\n",
     "우리는 여기서 첫번째 layer 를 구현해야 합니다. 초기 layer 는 일반적인 CNN 과 같이 ReLu 를 거친 256 개의 featuremap 을 형성할 수 있도록 만듭니다.<br></br>\n",
     "논문에서는 filter size = 9 , stride = 1 을 주었습니다. padding 은 VALID 를 이용해야 다음 구조와 같은 shape이 나옵니다."
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 파라메터 설정 \n",
@@ -100,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# squashing 함수. s_j 의 크기가 크면 1로 수렴하려 하고, s_j 의 크기가 작다면 0으로 수렴 \n",
@@ -115,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_capsule_i = 32\n",
@@ -169,7 +175,7 @@
    "source": [
     "### Routing Algorithm\n",
     "\n",
-    "![routing](https://jhui.github.io/assets/capsule/alg.jpg)"
+    "![routing](./image/routing.png)"
    ]
   },
   {
@@ -269,7 +275,7 @@
    "metadata": {},
    "source": [
     "### Reconstruction\n",
-    "![reconstruction](http://image.voidcn.com/proxy?url=http://mmbiz.qpic.cn/mmbiz_jpg/vJe7ErxcLmiaSBOhaBiaZFHh7GJnpRLrGsSUaVafqXmVhQ6IibWaKtgB123DSxHhvbzpYCJicCpEpSljgibIEWRSzIQ/0)\n",
+    "![reconstruction](./image/reconstruction.png)\n",
     "\n",
     "target capsule 은 input 이미지가 만약 3이라면 DigitCaps 의 3번째 row 를 꺼내 fully connected 를 진행합니다. <br></br>\n",
     "Decoder 의 역할을 하는 Reconstruction 을 통해 산출된 output 의 shape 은 image 의 크기와 같으며 추가적으로 최종적인 loss 에 input image 의 값과 ouput 값의 차를 줄이는 방식으로 학습합니다. "
@@ -311,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RECONSTRUCT_W = 0.0005\n",
@@ -366,7 +374,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "initial_learningrate = 0.001\n",
